Fix overflow on phone

--- a/style.css
+++ b/style.css
@@ -490,7 +490,7 @@ p {
         box-shadow: 2px 2px 2px 2px purple;
         border-radius: 1em;
         height: 15em;
-        width: 27em;
+        width: 24em;
         margin-bottom: 2%;
         margin-left: auto;
         margin-right: auto;
